Starcracker	Industrial.Evolution	Capital	Pretzelator	Contact - SirHartley#5459
Autoclaw	Industrial.Evolution	Fighter	EMP Bomber	Contact - SirHartley#5459
Parrot	Industrial.Evolution	Frigate	EMP Frigate	Contact - SirHartley#5459
Echo	Industrial.Evolution	Frigate	EMP Auto-Frigate	Contact - SirHartley#5459
Reverb	Industrial.Evolution	Destroyer	EMP Destroyer	Contact - SirHartley#5459

3.3.b
Pets
todo: Admiral Pirrot and the Starcracker-class Breadnought
todo: Parrot-Class Superclaw

Artillery
todo: automated claws and parrot to arty
todo: Watchtowers buildable in stable loc

3.3.a
General
Added - Full LunaLib Integration
Added - Setting to adjust column amount in all the ship pickers in this mod
Added - Planet Jump listener, interface to notify when a planet has finished jumping via rift generator (for modders)
Added - Disrupt Danger to all IndEvo Industries and Structures
Adjusted - Rules.csv $market -> $marketName for 0.96
Adjusted - Code Changes for 0.96
Adjusted - All industry images got touch-ups to bring them more in line with vanilla

Pets
Added - Pets: Add them to your ship, feed em, make em happy, and they'll accompany you! And die! And do nothing!
Added - Research Project for a rare Pet
Added - Animal Center: Store, manage, rename, euthanize and buy pets here! Comes with a station and dodgy animal sellers.
Added - Animal Centers to Gilead, Jangala, Fikenhild
Added - Small interaction to Arthulf (check the comms)

Automated Shipyards
Added - Rare chance for a ship to be an automated variant, usable without the skill
Adjusted - new interaction image (the old one was kinda trash)

Exploration
Added - Derelict Pet Shops (chance at very rare pets)
Added - Arsenal station can now have ship recovery event with capital or cruiser grade hulls
Adjusted - Fixed Arsenal station having lower chance to have event than intended
Adjusted - Default columns for ship picking on Ship Sacrifice event increased from 5 to 8