@@ -38,7 +38,7 @@ IndEvo_pop_default,CUSTOM,"The basic infrastructure required to support a given 
 IndEvo_pop_uw,CUSTOM,"A cartel of ruthless criminal families rule this polity with an iron fist. Petty decisions are made by the local bosses on a whim, and individual fortune can change quicker than credsticks change hands in one of the countless gambling dens. Everything can be made possible by the ever-changing status quo - everything, except personal safety.","Places a criminal cartel in power of this planet, decreasing income at high stability, and increasing it at low stability. Collects voluntary donations from traders visiting the system.",,
 IndEvo_pop_rural,CUSTOM,"The people of this polity live in small, distributed villages instead of central cities. Most commodities are locally sourced, if only out of necessity and the lacking infrastructure. Life is much simpler and less convenient than on planets with equivalent population numbers, yet preferred by many due to the general state of the sector. Disturbing this environment with dirty industry will cause severe protests.","Create distributed villages instead of cities, increasing population growth and stability. Farming provides supplies and has increased output. Industrial buildings have increased upkeep and reduce stability, rural buildings increase it instead.",,
 IndEvo_pop_hidden,CUSTOM,"Burrowed deep below the surface lies a massive network of connected subterran hubs, housing the majority of the population and industry of this planet. The problems usually associated with atmospheric exposure are not present here, the cities protected by rock or water. Yet few people wish to stay in an environment as artificial as this, deprived of their chance to gaze at distant suns and living out their lives in damp, dark, safety.","Build a sub-surface arcology to house the population. Negates most surface hazard conditions,  increases the defensive capabilites, lower growth and accesibility, and reduces industry output due to the constricted space.",,
-IndEvo_pop_monks,CUSTOM,"Monastery-cities dot the mountains and plains of this planet, each ruled by a sect with unique alignment and values, in turn creating a shifting political landscape usually seen only with underdeveloped societies. The people living here are hardy, tend to have combat experience, quickly adapt to change and are strict in their values and belief - making them ideal marines.","Establish monastic sects to govern the population. Halves positive income and military building upkeep, and prevents any luddic path activity. The stability of this planet can not fall below 3 or exceed 7, the maximum population is limited at size 5, and marines gain experience while stationed here. The many sects sometimes provide free ships up to destroyer size as tithes.",,
+IndEvo_pop_monks,CUSTOM,"Monastery-cities dot the mountains and plains of this planet, each ruled by a sect with unique alignment and values, in turn creating a shifting political landscape usually seen only with underdeveloped societies. The people living here are hardy, tend to have combat experience, quickly adapt to change and are strict in their values and belief - making them ideal marines.","Establish monastic sects to govern the population. Halves positive income and military building upkeep, and prevents any luddic path activity. The stability of this planet can not fall below 3 or exceed 7, the maximum population is limited at size 5, and marines gain experience while stationed here. The many sects sometimes provide free ships as tithes.",,
 IndEvo_pop_resort,CUSTOM,"Beautiful beaches and grand hotels stretch along the shores of the the planet, while extensive recreational facilities dot the interior of the continent. This is not a place to live, but to experience, offering activities and locations for almost every price range. Industry is extremely limited to keep the environment clean and desireable, and housing is prohibitively expensive.","Declare this planet a global resort. This will massively increase the flat base income, reduce all ongoing costs by 80%, and increase the growth and stability of other planets in the system. However, a resort planet can not grow past size 4, does not support industrial buildings, and only has one industry slot.",,
 IndEvo_pop_corpos,CUSTOM,"Massive neon-lit corporate arcologies tower over the slums of the more fortunate, for anyone living under corporate contractorship is considered no better than a slave. Management lives in glitz and glamour, hovercars shooting over gray worker districts as if to remind of what is possible if only you put in enough work. There is no better place to earn money than here - and no better place to lose everything you once stood for.","Leave the governance of this planet to local megacorps. This causes stability to depend on income - the more income, the higher the stability. It also increases earnings, limits the time a building can be disrupted, and unlocks all industry slots. However, military installations have massively increased costs, the working conditions cause negative base growth, and the colony can shrink in size. ",,
 IndEvo_pop_outpost,CUSTOM,"The basic infrastructure required to support a given population, from rickety orbital hab-modules to megacities and everything between.",This is a placeholder and functions the same way as default population does.,,
