@@ -162,7 +162,7 @@ public class PetShop extends BaseIndustry implements EconomyTickListener {
         super.advance(amount);
 
         if (petShopStationEntity == null && isFunctional() && !isBuilding()) ensurePetShopCreatedOrAssigned();
-        if(isFunctional() && market.hasSubmarket(Ids.PETMARKET)) Global.getSector().addScript(new SubMarketAddOrRemovePlugin(market, Ids.PETMARKET, false));
+        if(isFunctional() && !market.hasSubmarket(Ids.PETMARKET)) Global.getSector().addScript(new SubMarketAddOrRemovePlugin(market, Ids.PETMARKET, false));
     }
 
     @Override
